# variance-test

./: .gitignore  AUDIT.md  CHANGELOG.md  CNAME  LICENSE  README.md  main.py  pyproject.toml  tests.py
.github/workflows/: ci.yml
code/: Variance Ratio Test Simulation.ipynb  __init__.py  empirical_application.py  price_paths.py  simulation.py  sp500_tickers.csv  utils.py  variance_test.py  visuals.py
examples/: basic_battery.py  empirical_application.py  robust_battery.py  rolling_battery.py  variance_ratio_only.py
src/variance_test/: __init__.py  battery.py  core.py  data.py  models.py  rolling.py  simulation.py  visuals.py
src/variance_test/diagnostics/: __init__.py  arch_lm.py  ljung_box.py  robust_vr.py  runs.py  vr_classic.py
tests/: test_battery.py  test_build_metadata.py  test_data_normalization.py  test_models.py  test_package_imports.py  test_public_api.py  test_robust_vr.py  test_rolling.py  test_simulation_compat.py  test_vrt_hardening.py
